minor changes in the pages

--- a/gallery.html
+++ b/gallery.html
@@ -86,7 +86,7 @@
     <!--Navigation-->
 
     <!--Gallery Header-->
-    <section class="mbr-section article mbr-parallax-background" id="msg-box8-r" data-rv-view="73" style="background-image: url(assets/img/gallery-header.jpeg); padding-top: 120px; padding-bottom: 40px;">
+    <section class="mbr-section article mbr-parallax-background" id="msg-box8-r" data-rv-view="73" style="background-image: url(assets/img/gallery.jpeg); padding-top: 120px; padding-bottom: 40px;">
         <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
         </div>
         <div class="container">
@@ -94,7 +94,7 @@
                 <div class="col-md-8 col-md-offset-2 text-xs-center">
                     <h3 class="mbr-section-title display-2">Gallery</h3>
                     <div class="lead">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem, quod?</p>
+                        <p>FORM, WORKMANSHIP, FASHION</p>
                     </div>
 
                 </div>
