--- a/index.html
+++ b/index.html
@@ -197,13 +197,11 @@
             <div class="row">
                 <div class="mbr-table-md-up">
                     <div class="mbr-table-cell col-md-4">
-                        <div class="text-xs-center"><a class="btn btn-primary" href="https://mobirise.com">VIEW VIDEO
-                                TUTORIAL</a></div>
+                        <div class="text-xs-center"><a class="btn btn-primary" href="./gallery.html">VIEW GALLERY</a></div>
                     </div>
                     <div class="mbr-table-cell mbr-right-padding-md-up col-md-8 text-xs-center text-md-left">
-                        <h3 class="mbr-info-title mbr-section-title display-2">TRENDY WEBSITE BLOCKS</h3>
-                        <h2 class="mbr-info-subtitle mbr-section-subtitle">Cut down the development time with
-                            drag-and-drop website builder.</h2>
+                        <h3 class="mbr-info-title mbr-section-title display-2">TRENDING STYLES</h3>
+                        <h2 class="mbr-info-subtitle mbr-section-subtitle">Look at our trending styles.</h2>
                     </div>
                 </div>
             </div>
