--- a/index_temp.html
+++ b/index_temp.html
@@ -893,3 +893,85 @@
 </body>
 
 </html>
+
+
+
+    <!--About Us Section-->
+    <section class="mbr-section" id="testimonials1-w" data-rv-view="85" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
+
+
+
+        <div class="mbr-section mbr-section__container mbr-section__container--middle">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 text-xs-center">
+                        <h3 class="mbr-section-title display-2">Our Philosphy</h3>
+                        <small class="mbr-section-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Impedit modi facilis minus quisquam, maxime obcaecati.</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="mbr-testimonials mbr-section mbr-section-nopadding">
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-xs-12 col-lg-4">
+
+                        <div class="mbr-testimonial card mbr-testimonial-lg">
+                            <div class="card-block">
+                                <p>Fashion is the talk of town,and its our untiring passion for fashion which motivated
+                                    us to fabricate this idea which will offer you the latest trends, absorb the
+                                    immediate requirements and spread it to the rest of the world in the best lead
+                                    time. We ensure that our quality will never let your hopes down as we aim to make
+                                    every single customer of ours into an ultimate trendsetter.</p>
+                            </div>
+                            <div class="mbr-author card-footer">
+                                <div class="mbr-author-img"><img src="assets/images/face3.jpg" class="img-circle"></div>
+                                <div class="mbr-author-name">Abanoub S.</div>
+                                <small class="mbr-author-desc">User</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-lg-4">
+
+                        <div class="mbr-testimonial card mbr-testimonial-lg">
+                            <div class="card-block">
+                                <p>We are a team of ambitious people who always look for new dimensions in fashion
+                                    industry. Our area of interest lies in offering products according to international
+                                    demands in terms of design and requirements, keeping in mind the latest trends
+                                    dwelling in society.</p>
+                            </div>
+                            <div class="mbr-author card-footer">
+                                <div class="mbr-author-img"><img src="assets/images/face1.jpg" class="img-circle"></div>
+                                <div class="mbr-author-name">Suffian A.</div>
+                                <small class="mbr-author-desc">User</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-lg-4">
+
+                        <div class="mbr-testimonial card mbr-testimonial-lg">
+                            <div class="card-block">
+                                <p>Urbane 90 have been known for credibility and uniqueness of approach, and we try to
+                                    maintain the same in our services. We hope you enjoy our products as much as we
+                                    enjoy offering them to you!!!</p>
+                            </div>
+                            <div class="mbr-author card-footer">
+                                <div class="mbr-author-img"><img src="assets/images/face2.jpg" class="img-circle"></div>
+                                <div class="mbr-author-name">Jhollman C.</div>
+                                <small class="mbr-author-desc">User</small>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+    <!--About Us Section-->
